log
Thu, May 15, 2025  5:44:00 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, May 15, 2025  6:00:28 PM: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
e22199d
Fri, May 16, 2025  8:28:26 PM: 
 tests:  0|5
total_score: 0/70
c8be45e
Fri, May 16, 2025  8:39:02 PM: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  3|4
total_score: 20/70
b5eab92
Fri, May 16, 2025  8:45:07 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:92:7: error: variable 'encontrado' set but not used [-Werror=unused-but-set-variable]
   int encontrado = 0;
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
23f8650
